fixed nav z-index

--- a/src/roundabout-style.css
+++ b/src/roundabout-style.css
@@ -104,6 +104,7 @@ Navigation
 	bottom: 0;
 	height: 40px;
 	width: 25%;
+   z-index: 2;
 }
 
 .roundabout-nav-btn {
